Add self-sign for default cert

--- a/templates/config.json.j2
+++ b/templates/config.json.j2
@@ -2,7 +2,7 @@
   "bootstrap_expect": {{ consul_cluster_node_count }},
   "retry_join": [
 {% for server in consul_cluster_nodes %}
-    "{{ hostvars[server].ansible_all_ipv4_addresses|last }}"{% if not loop.last %},{% endif %}
+    "{{ hostvars[server]['ansible_' + consul_interface]['ipv4']['address'] }}"{% if not loop.last %},{% endif %}
 
 {% endfor %}  ],
   "retry_interval": "{{ consul_retry_join_interval }}",
@@ -10,8 +10,8 @@
   "server"  : true,
 {% endif %}
   "data_dir": "{{ consul_data_dir }}",
-  "bind_addr": "{{ ansible_all_ipv4_addresses|last }}",
-  "client_addr": "{{ ansible_all_ipv4_addresses|last }}",
+  "bind_addr": "{{ hostvars[inventory_hostname]['ansible_' + consul_interface]['ipv4']['address'] }}",
+  "client_addr": "{{ hostvars[inventory_hostname]['ansible_' + consul_interface]['ipv4']['address'] }}",
   "ports": {
     "http"  : {{ consul_http_port   }},
     "https" : {{ consul_https_port  }},
@@ -21,8 +21,8 @@
   },
   "encrypt"  : "{{ hostvars[consul_cluster_nodes[0]].consul_whisper_key_fact }}",
 {% if consul_secure %}
-  "key_file" : "{{ consul_ssl_key_file     }}",
-  "cert_file": "{{ consul_ssl_cert_file    }}",
+  "key_file" : "{{ consul_ssl_key_file  }}",
+  "cert_file": "{{ consul_ssl_cert_file }}",
 {% endif %}
 
   "log_level"    : "{{ consul_log_level }}",
@@ -30,6 +30,6 @@
   "enable_syslog": true,
 {% endif %}
 {% if consul_web_ui_enabled %}
-  "ui_dir": "{{ consul_web_ui_dir }}/dist"
+  "ui_dir": "{{ consul_web_ui_dir }}"
 {% endif %}
 }
